--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/storage": "^7.0.1",
     "@types/fluent-ffmpeg": "^2.1.21",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2"
